# AndroidNativeGuard

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/Modules/AntiDebug/: AntiDebug.cpp
app/src/main/cpp/Modules/AntiDump/: AntiDump.cpp
app/src/main/cpp/Modules/AntiLibPatch/: AntiLibPatch.cpp  AntiLibPatch.h
app/src/main/cpp/Modules/FridaDetect/: FridaDetect.cpp
app/src/main/cpp/Modules/RiGisk/: RiGisk.cpp
app/src/main/cpp/Utils/: Log.h  obfuscate.h
app/src/main/java/id/kuro/androidnativeguard/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
